# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/runtime_core/ark_config.gni")

action("isa_combine") {
  script = "$ark_root/isa/combine.rb"
  inputs = [
    "$ark_root/isa/isa.yaml",
    "$ark_root/../js_runtime/ecmascript/ecma_isa.yaml",
  ]
  input0 = rebase_path(inputs[0], root_build_dir)
  input1 = rebase_path(inputs[1], root_build_dir)
  outputs = [ "$root_gen_dir/isa/isa.yaml" ]
  args = [
    "-d",
    "$input0,$input1",
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}
